Adjust background image

--- a/src/lib/css/styles.css
+++ b/src/lib/css/styles.css
@@ -7,16 +7,26 @@
 	--radialGradient: radial-gradient(var(--deepBlue), var(--black)) no-repeat center center fixed;
 	--mainBackground: radial-gradient(oklch(25% 0 0) 0%, 69%, oklch(0% 0 0)) no-repeat center center
 		fixed;
+	--backgroundSize: 100%;
+	--backgroundPosition: center 150%;
 }
 
 body {
 	margin: 0;
 	background:
-		url('../assets/waves2.svg') no-repeat center 100% / 120% fixed,
+		url('../assets/waves2.svg') no-repeat var(--backgroundPosition) / var(--backgroundSize) fixed,
 		var(--mainBackground);
 	font-family: 'Inter', sans-serif;
 	height: 100vh;
 	color: #ffffff;
+	@media (max-width: 1800px) {
+		--backgroundSize: 120%;
+		--backgroundPosition: center 100%;
+	}
+	@media (max-width: 800px) {
+		--backgroundSize: 100%;
+		--backgroundPosition: center 80%;
+	}
 }
 
 .home {
